--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 
   <!-- --------- FAVICON ---------- -->
-    <link
-      rel="shortcut icon"
-      href="assets/images/favicon.jpg"
-      type="image/x-icon"
-    />
+  <link rel="shortcut icon" href="assets/images/favicon.jpg" type="image/x-icon" />
 
   <title>Parth Prajapati's Portfolio</title>
 </head>
@@ -76,7 +72,7 @@
         </div>
         <div class="featured-text">
           <div class="featured-text-card">
-            <span> <strong>Hi! I am </strong><strong class="startname">Parth Prajapati</strong></span>     
+            <span> <strong>Hi! I am </strong><strong class="startname">Parth Prajapati</strong></span>
           </div>
           <div class="featured-name">
             <p><span class="typedText"></span></p>
@@ -87,12 +83,14 @@
             </p>
           </div> -->
           <div class="featured-text-btn">
-            <button class="btn blue-btn" onclick="window.open('assets/images/Resume.pdf', '_blank')">Download CV <i class="uil uil-file-alt"></i></button>            
+            <button class="btn blue-btn" onclick="window.open('assets/images/Resume.pdf', '_blank')">Download CV <i
+                class="uil uil-file-alt"></i></button>
           </div>
           <div class="social_icons">
             <a href="https://www.linkedin.com/in/parth-d-prajapati/" class="icon" target="_blank"><i
                 class="uil uil-linkedin-alt"></i></a>
-            <a href="https://github.com/Parth-Prajapati572" target="_blank" class="icon"><i class="uil uil-github-alt"></i></a>
+            <a href="https://github.com/Parth-Prajapati572" target="_blank" class="icon"><i
+                class="uil uil-github-alt"></i></a>
           </div>
         </div>
         <div class="scroll-icon-box">
@@ -112,8 +110,10 @@
             <p>
               Hi, I’m Parth Dharmendra Prajapati, a data-driven problem solver with a passion for Machine Learning, AI,
               and full-stack development. I’m currently pursuing my Master’s in Computer Science at USC, working as a
-              Junior Data Science Intern at Vayu Technology Corp. and a Lead Course Producer of course ISE 583:
-              Enterprise-Wide Information Systems at USC. </p><br>
+              Junior Data Science Intern at Vayu Technology Corp. and a Lead Course Producer for ISE 583:
+              Enterprise-Wide Information Systems at USC. Additionally, I served as a Graduate Teaching Assistant for
+              ITP 259: Basics of Artificial Intelligence, where I helped students grasp foundational AI concepts and
+              apply them to real-world problems. </p><br>
 
             <p>At Vayu, I work on sensor data analysis and AI-driven biomechanics models, leveraging machine learning
               and data science to enhance system performance. As a Lead Course Producer and former Teaching Assistant,
@@ -123,10 +123,10 @@
             <p>I enjoy building AI-powered applications, intelligent systems, and scalable web platforms, working with
               technologies like Python, Java, React, TensorFlow, PyTorch, and AWS. Whether it's improving models or
               building interactive applications, I enjoy working through challenging problems and finding effective
-              solutions. </p><br>
+              solutions.</p><br>
 
             <p>I’m currently looking for full-time roles in Data Science, Machine Learning, or Software Engineering,
-              where I can contribute my skills, collaborate with innovative teams, and make a meaningful impact. </p>
+              where I can contribute my skills, collaborate with innovative teams, and make a meaningful impact.</p>
             <br>
 
             <p>Let’s connect and build something great! 🚀 </p>
@@ -665,13 +665,14 @@
       <section class="section" id="contact">
         <div class="top-header">
           <h1>Get in touch</h1>
-          
+
         </div>
         <div class="row">
           <div class="col">
             <div class="contact-info">
               <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-              <p><i class="uil uil-envelope"></i> Email: <a href="mailto:parthdpraja@gmail.com" class="email-contact">parthdpraja@gmail.com</a></p>
+              <p><i class="uil uil-envelope"></i> Email: <a href="mailto:parthdpraja@gmail.com"
+                  class="email-contact">parthdpraja@gmail.com</a></p>
               <p><i class="uil uil-phone"></i> Phone No: +1 (213) 421-4355</p>
             </div>
           </div>
@@ -708,8 +709,9 @@
       </div>
       <div class="footer-social-icons">
         <a href="https://www.linkedin.com/in/parth-d-prajapati/" class="icon" target="_blank"><i
-          class="uil uil-linkedin-alt"></i></a>
-      <a href="https://github.com/Parth-Prajapati572" target="_blank" class="icon"><i class="uil uil-github-alt"></i></a>
+            class="uil uil-linkedin-alt"></i></a>
+        <a href="https://github.com/Parth-Prajapati572" target="_blank" class="icon"><i
+            class="uil uil-github-alt"></i></a>
       </div>
       <div class="middle-footer">
         <ul class="footer-menu">
