--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
           <!-- <div class="featured-text-info">
             <p>
-              Junior Data Science Intern at Vayu Technology Corp. | Graduate Teaching Assistant and Lead Course Producer at USC | MS in Computer Science at USC
+              Data Science Intern at Vayu Technology Corp. | Graduate Teaching Assistant and Lead Course Producer at USC | MS in Computer Science at USC
             </p>
           </div> -->
           <div class="featured-text-btn">
@@ -109,8 +109,8 @@
           <div class="about-info">
             <p>
               Hi, I’m Parth Dharmendra Prajapati, a data-driven problem solver with a passion for Machine Learning, AI,
-              and full-stack development. I’m currently pursuing my Master’s in Computer Science at USC, working as a
-              Junior Data Science Intern at Vayu Technology Corp. and a Lead Course Producer for ISE 583:
+              and full-stack development. I’m currently pursuing my Master’s in Computer Science at USC, working as a 
+              Data Science Intern at Vayu Technology Corp. and a Lead Course Producer for ISE 583:
               Enterprise-Wide Information Systems at USC. Additionally, I served as a Graduate Teaching Assistant for
               ITP 259: Basics of Artificial Intelligence, where I helped students grasp foundational AI concepts and
               apply them to real-world problems. </p><br>
@@ -294,7 +294,7 @@
               <img src="assets/images/vayu.png" alt="" />
               <div class="ttext-box">
                 <h2>Vayu Technology Corp.</h2>
-                <p><strong>Junior Data Science Intern</strong></p>
+                <p><strong>Data Science Intern</strong></p>
                 <p>August 2024 - April 2025</p>
                 <small>Los Angeles, California</small>
                 <p>
@@ -673,7 +673,7 @@
               <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
               <p><i class="uil uil-envelope"></i> Email: <a href="mailto:parthdpraja@gmail.com"
                   class="email-contact">parthdpraja@gmail.com</a></p>
-              <p><i class="uil uil-phone"></i> Phone No: +1 (213) 421-4355</p>
+              <p><i class="uil uil-phone" ></i> Phone No: +1 (213) 421-4355</p>
             </div>
           </div>
           <div class="col">
