OCI Certification added

--- a/index.html
+++ b/index.html
@@ -536,9 +536,16 @@
         </div>
         <div class="certificate-container">
           <div class="certificate-box">
+            <img src="assets/images/oci.png" alt="" />
+            <h3>OCI 2025 Certified Generative AI Professional</h3>            
+            <div class="certificate-btn">
+              <a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=7CBD20D9CA3B966913BFE3E355EC3051F05FD9A4B3B11C0ACEACA8424BD6B701" target="_blank"
+                class="btn">Show Credential</a>
+            </div>
+          </div>
+          <div class="certificate-box">
             <img src="assets/images/udemy.png" alt="" />
-            <h3>Machine Learning A-Z™: Python & R in Data Science</h3>
-            <label>Show Credential</label>
+            <h3>Machine Learning A-Z™: Python & R in Data Science</h3>            
             <div class="certificate-btn">
               <a href="https://www.udemy.com/certificate/UC-976f2332-c241-41e1-9943-9c82e5346bde/" target="_blank"
                 class="btn">Show Credential</a>
